Fixed spacing issue in ie8 between centerpiece and bottom columns

--- a/src/scss/_centerpiece.scss
+++ b/src/scss/_centerpiece.scss
@@ -18,7 +18,6 @@
   }
 
   @include body-prefix('.ie8') {
-    margin: auto;
     z-index: 1;
   }
 
